# agent-ng

./: Cargo.toml  README.md  Untitled Diagram.drawio  build.rs  config.yaml  go.mod  go.sum
rust/: build.rs
src/: lib.rs  main.rs
src/cache_controller/: cache.rs  graph.rs  mod.rs
src/config/: config.rs
src/config_controller/: config_controller.rs  mod.rs
src/config_controller/cli/: cli.rs
src/config_controller/cli/protos/: agentcli.rs  cli.proto  mod.rs
src/config_controller/cn2/: cn2.rs  mod.rs
src/config_controller/cn2/resources/: resource.rs  virtualmachine.rs  virtualmachineinterface.rs  virtualnetwork.rs
src/protos/: github.com.michaelhenkel.config_controller.pkg.apis.v1.rs  mod.rs  ssd_git.juniper.net.contrail.cn2.contrail.pkg.apis.core.v1alpha1.rs
src/resources/: resource.rs  virtualmachine.rs  virtualmachineinterface.rs  virtualnetwork.rs
