[package]
name = "agent_ng"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.9"
tonic = "0.6.2"
clap = "3.1.15"
figment = { version = "0.10", features = ["yaml", "env"] }
serde = { version = "1.0.92", features = ["derive"] }
syn = "1.0.90"
tokio = { version = "1", features = ["full"] }
queues = "1.0.2"
crossbeam = "0.8"
crossbeam-utils = "0.8"
crossbeam-channel = "0.5"
futures = "0.3"
async-trait = "0.1.52"

[build-dependencies]
tonic-build = { version = "0.6.2", features = ["prost"] }
prost-build = "0.9.0"
